Prevent footer from overflowing

--- a/portal/src/components/MainFooter/MainFooter.component.less
+++ b/portal/src/components/MainFooter/MainFooter.component.less
@@ -101,7 +101,6 @@
       height: 139px;
     }
     margin: auto;
-    justify-content: space-between;
     align-items: center;
     z-index: 1;
     padding: 0 0 15px;
