--- a/portal/src/components/MainFooter/Menu/Menu.component.less
+++ b/portal/src/components/MainFooter/Menu/Menu.component.less
@@ -2,8 +2,6 @@
 .menu {
   @media @desktop {
     text-align: right;
-    padding-right: 21%;
-    flex: 1;
   }
 
   &__links {
